--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,31 +6,26 @@ body {
     margin-right: 6px;
 }
 
-
-.item-Outerbox {
-    border: 1px solid black;
+.border-buttom {
+    border-bottom: 1px solid #eee;
 }
-/*Frontpage*/
+
+
+/*******************************/
+/*----------Frontpage----------*/
+/*******************************/
+.item-Outerbox {
+    border: 1px solid #eee;
+}
+
 .item-image-box {
-    /*border-bottom: solid #d6d6d6 1px;
-    position: relative;
-    min-height: 250px;*/
-
-background-color: red;
-
-overflow: hidden;
-		position: relative;
-		margin-top: 10px;
-		height: 200px;
+    height: 200px;
+    background-color: #eee;
 }
 
 .item-image {
-    /*max-width: 100%;
-    margin-bottom: 10px;*/
-height: 100%;
-    width:auto;
-		height: auto;
-
+    width: auto;
+    height: 100%;
 }
 /*@media screen and (min-width: 992px ) {
     .item-image {
@@ -43,9 +38,24 @@ height: 100%;
          max-height: 200px;
      }
   }*/
+/*******************************/
+/*----------Item page----------*/
+/*******************************/
+.item-image-box-item-page {
+    height: 430px;
+    background-color: #eee;
+}
 
+.item-image-item-page {
+    width: auto;
+    height: 100%;
 
-/*Item page*/
+}
+
+.description {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 .userInfo {
     border-bottom: solid 1px #c7c7c7;
     padding-bottom: 15px;
@@ -65,7 +75,10 @@ height: 100%;
     height: 400px;
 }
 
-/* Profile page style */
+/****************************************/
+/*----------Profile page style----------*/
+/****************************************/
+
 .profilePicture {
   padding: 15px 0px;
 }
