--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,3 +110,7 @@ body {
   border-top: 1px solid #dddddd;
   padding-bottom: 1em;
 }
+
+/*********************************************/
+/*----------Inbox page style----------*/
+/*********************************************/
