--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,13 @@ body {
     border-bottom: 1px solid #eee;
 }
 
+.small-profilePicture{
+    width: 25px;
+    height: 25px;
+    margin-right: 5px;
+    border-radius: 50%;
+}
+
 /*******************************/
 /*----------Frontpage----------*/
 /*******************************/
@@ -73,6 +80,10 @@ body {
 #map_canvas {
     width: 355px;
     height: 400px;
+}
+
+.save-button {
+    height: 30px;
 }
 
 /****************************************/
