--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,38 +110,45 @@ body {
   font-size: 1.2em;
 }
 
+/**************************************/
+/*----------Image page style----------*/
+/**************************************/
+
+.small-item-image {
+    width: 75px;
+    height: 75px;
+}
+
 /*********************************************/
 /*----------Conversation page style----------*/
 /*********************************************/
 .conversationMessageCurrentUser {
-  padding-bottom: 1em;
+  padding-bottom: 10px;
 }
 
 .MessageCurrentUser {
     background-color: #bae0ff;
     -webkit-border-radius: 25px;
--webkit-border-top-right-radius: 0;
--moz-border-radius: 25px;
--moz-border-radius-topright: 0;
-border-radius: 25px;
-border-top-right-radius: 0;
+    -webkit-border-top-right-radius: 0;
+    -moz-border-radius: 25px;
+    -moz-border-radius-topright: 0;
+    border-radius: 25px;
+    border-top-right-radius: 0;
     padding: 15px;
 }
 
 .conversationMessageOtherUser {
-
-  padding-bottom: 1em;
-
+  padding-bottom: 10px;
 }
 
 .MessageOtherUser {
     background-color: #cbcbcb;
     -webkit-border-radius: 25px;
--webkit-border-top-left-radius: 0;
--moz-border-radius: 25px;
--moz-border-radius-topleft: 0;
-border-radius: 25px;
-border-top-left-radius: 0;
+    -webkit-border-top-left-radius: 0;
+    -moz-border-radius: 25px;
+    -moz-border-radius-topleft: 0;
+    border-radius: 25px;
+    border-top-left-radius: 0;
     padding: 15px;
 }
 
