--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,7 @@ body {
 /*******************************/
 .item-Outerbox {
     border: 1px solid #eee;
+    padding-bottom: 15px;
 }
 
 .item-image-box {
